TEST_PROGRAMS/INVALID/alexandre_st-louis_fortier/003-if-no-expression.min

if then
  print 1;
endif

